complete relational generation, swap, and save for plansgit add .

--- a/website/templates/generated_plans.html
+++ b/website/templates/generated_plans.html
@@ -23,11 +23,10 @@
                                 <ul>
                                     {% for exercise in day.exercises %}
                                     <li class="list-group-item">
-                                        {% if exercise.toFailure %}
+                                        {% if exercise.to_failure %}
                                         {{ exercise.name }} : {{ exercise.sets }} x AMRAP
                                         {% else %}
-                                        {{ exercise.name }} : {{ exercise.sets }} x {{ exercise.start_reps }}–{{
-                                        exercise.end_reps }}
+                                        {{ exercise.name }} : {{ exercise.sets }} x {{ exercise.start_reps }}–{{ exercise.end_reps }}
                                         {% endif %}
                                     </li>
                                     {% endfor %}
