remove isolation radio

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -93,7 +93,7 @@
                 </div>
                 <input type="hidden" name="priority_muscles" id="priorityMusclesInput">
 
-                <div class="mt-4">
+                <!-- <div class="mt-4">
                     <h6 class="card-subtitle mb-2">Isolation movements before compound lifts if needed? <i class="bi bi-question-circle" data-bs-toggle="tooltip" data-bs-placement="right" title="This can help target specific muscles earlier, but may interfere with strength gains for bigger lifts that follow."></i></h6>
                     <div class="d-flex flex-wrap">
                         <div class="form-check me-3">
@@ -105,7 +105,7 @@
                             <label for="compoundFirst" class="form-check-label">No, I prefer compound first</label>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
 
